# learning_mode_agent

./: .env.example  .env.test  .gitignore  README.md  hello.py  pyproject.toml
alembic/: env.py
alembic/versions/: 17416daad02b_first_commit.py  8b2a5a8e46b5_password_reset_model.py  9077a3d4f5d4_added_is_verified_for_email_verification.py  c5bce266a061_email_verification_table.py
app/: config.py  main.py
app/agent_services/: agent_config.py  main_agent.py
app/models/: models.py
app/routers/: auth.py  messages.py  sessions.py  threads.py
app/schemas/: schemas.py
app/services/: email_service.py  message_service.py  password_reset_service.py  session_service.py  thread_service.py  user_service.py
app/utils/: db.py  security.py  session_store.py
tests/: conftest.py  test_email_verification.py  test_message_routes.py  test_session_routes.py  test_thread_routes.py  test_user_routes.py
