[project]
name = "learning-mode-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.5",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.118.0",
    "openai-agents>=0.3.3",
    "passlib[argon2,bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.43",
]
